--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     url: jdbc:mysql://rm-bp1fv4f328bk6p3zoro.mysql.rds.aliyuncs.com:3306/emp3?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
     username: wp
-    password: rm-bp1fv4f328bk6p3zoro.mysql.rds.aliyuncs.com
+    password: Abc123456
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 mybatis:
