--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,8 @@ server:
 spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
-    url: jdbc:mysql://rm-bp1fv4f328bk6p3zoro.mysql.rds.aliyuncs.com:3306/emp3?useSSL=false&useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
+    url: jdbc:mysql://rm-bp1fv4f328bk6p3zoro.mysql.rds.aliyuncs.com:3306/erp3?characterEncoding=utf-8
+
     username: wp
     password: Abc123456
     driver-class-name: com.mysql.cj.jdbc.Driver
