第一次整合

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,4 +15,13 @@ mybatis:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
+pagehelper:
+  helperDialect: MySQL
+  reasonable: true
+  supportMethodsArguments: true
+  pageSizeZero: true
+  params: count=countSql
+
+
+
 
